k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mrdj
spec:
  replicas: 2
  selector:
    matchLabels: {}
  template:
    metadata:
      labels: {}
    spec:
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app: mrdj
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: mrdj
          image: ghcr.io/brandonmartinez/mrdj:latest
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
