k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mrdj-svc
spec:
  ports:
    - name: 80-tcp
      port: 80
      targetPort: 3000
